--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,7 +2,11 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/runFragment">
+    app:startDestination="@id/setupFragment">
+
+    <action android:id="@+id/action_global_trackingFragment"
+        app:destination="@id/trackingFragment"
+        app:launchSingleTop="true"/>
 
     <fragment
         android:id="@+id/runFragment"
@@ -31,5 +35,8 @@
     <fragment
         android:id="@+id/trackingFragment"
         android:name="com.runningbuddy.ui.fragments.TrackingFragment"
-        android:label="TrackingFragment" />
+        android:label="TrackingFragment">
+        <action android:id="@+id/action_trackingFragment_to_runFragment"
+            app:destination="@id/runFragment"/>
+    </fragment>
 </navigation>
